--- a/Code/Servidor/Dockerfile
+++ b/Code/Servidor/Dockerfile
@@ -3,11 +3,11 @@ FROM python:3-alpine
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-COPY Servidor/requirements.txt /usr/src/app/
+COPY requirements.txt /usr/src/app/
 
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-COPY Servidor/ /usr/src/app
+COPY . /usr/src/app
 
 EXPOSE 8080
 
