--- a/Code/Servidor/Dockerfile
+++ b/Code/Servidor/Dockerfile
@@ -4,8 +4,10 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
-
+RUN apk update && apk add postgresql-libs && \
+ apk add --virtual .build-deps gcc musl-dev postgresql-dev
 RUN pip3 install --no-cache-dir -r requirements.txt
+RUN apk --purge del .build-deps
 
 COPY . /usr/src/app
 
