--- a/Code/Database/Dockerfile
+++ b/Code/Database/Dockerfile
@@ -1,4 +1,5 @@
 FROM postgres
 WORKDIR /docker-entrypoint-initdb.d
 ADD code.sql /docker-entrypoint-initdb.d
+ADD funciones_de_consulta.sql /docker-entrypoint-initdb.d
 EXPOSE 5432
