Reordenación ficheros de autoamtización sql de postgres

--- a/Code/Database/Dockerfile
+++ b/Code/Database/Dockerfile
@@ -1,5 +1,6 @@
 FROM postgres
 WORKDIR /docker-entrypoint-initdb.d
-ADD code.sql /docker-entrypoint-initdb.d
-ADD funciones_de_consulta.sql /docker-entrypoint-initdb.d
+ADD 00_code.sql /docker-entrypoint-initdb.d
+ADD 01_funciones_de_consulta.sql /docker-entrypoint-initdb.d
+ADD 02_poblado.sql /docker-entrypoint-initdb.d
 EXPOSE 5432
