URL Web CORS mediante fichero  configuración
Ahora para indicar si hace falta los headers de CORS o la URL de origen de la web
Angular, no hace falta reconstruir con 'docker-compose build', sino modificar
los parámetros en el fichero .env y usar 'docker-compose up -d' para actualizar la
configuración.

--- a/Code/.env
+++ b/Code/.env
@@ -7,6 +7,8 @@ DB_USER=postgres
 DB_PASS=mysecretpassword
 DB_SERVICE=database
 DB_PORT=5432 
+WEB_CORS=true
+WEB_URI=http://localhost:2595
 
 
 # Variables Postgres
